# cookiecutter-python

./: .pre-commit-config.yaml  README.md  cookiecutter.json  requirements-dev.txt
{{ cookiecutter.project_slug }}/: .editorconfig  .gitignore
{{ cookiecutter.repository_name }}/: pyproject.toml
